--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,8 +3,18 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: #1E90FF;
+    background: linear-gradient(90deg, #003366, #1E90FF);
     color: white;
+  }
+  
+  .navbar .logo-container {
+    display: flex;
+    align-items: center;
+  }
+  
+  .navbar .logo {
+    width: 150px;
+    height: auto;
   }
   
   .navbar ul {
@@ -19,5 +29,10 @@
   .navbar ul li a {
     color: white;
     text-decoration: none;
+    font-size: 18px;
+  }
+  
+  .navbar ul li a:hover {
+    color: #ffcc00;
   }
   
